Prepare package for npm publication
## Changes Made
- Updated package.json with npm publication metadata
- Added scoped package name: @taizo-pro/github-discussions-cli
- Enhanced package description and keywords for discoverability
- Added author, repository, and homepage information
- Specified Node.js version requirement (>=18.0.0)
- Added files array to control what gets published
- Created MIT LICENSE file
- Updated README with correct npm install command
- Added comprehensive PUBLISHING.md guide

## Package Details
- Name: @taizo-pro/github-discussions-cli
- Version: 1.0.0
- License: MIT
- Node.js: >=18.0.0
- Package size: ~21KB (97KB unpacked)
- Includes: dist/, README.md, LICENSE

## Ready for Publication
Package is ready for npm publish with `npm publish --access public`

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "github-discussions-cli",
+  "name": "@taizo-pro/github-discussions-cli",
   "version": "1.0.0",
-  "description": "CLI tool and macOS app for GitHub Discussions",
+  "description": "A powerful CLI tool for interacting with GitHub Discussions without opening a browser",
   "type": "module",
   "main": "dist/cli/index.js",
   "bin": {
@@ -18,9 +18,37 @@
     "prepublishOnly": "npm run build",
     "prepack": "npm run build"
   },
-  "keywords": ["github", "discussions", "cli", "macos"],
-  "author": "",
+  "keywords": [
+    "github",
+    "discussions", 
+    "cli",
+    "command-line",
+    "api",
+    "graphql",
+    "typescript",
+    "nodejs"
+  ],
+  "author": {
+    "name": "taizo-pro",
+    "url": "https://github.com/taizo-pro"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/taizo-pro/nooknote.git"
+  },
+  "homepage": "https://github.com/taizo-pro/nooknote#readme",
+  "bugs": {
+    "url": "https://github.com/taizo-pro/nooknote/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "dependencies": {
     "@octokit/graphql": "^7.0.2",
     "commander": "^11.1.0",
