Remove macOS app and focus on CLI tool only
## Changes Made
- Removed macos-app directory and all related files
- Updated README to remove macOS app references
- Cleaned up project description to focus on CLI
- Updated package.json keywords
- Removed macOS-specific entries from .gitignore
- Updated roadmap to reflect CLI-only focus

## Rationale
- Simplified project scope to CLI tool only
- Reduced maintenance burden
- Better focus on core functionality
- npm package already provides full functionality

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@taizo-pro/github-discussions-cli",
   "version": "1.0.0",
-  "description": "A powerful CLI tool for interacting with GitHub Discussions without opening a browser",
+  "description": "A powerful command-line tool for interacting with GitHub Discussions without opening a browser",
   "type": "module",
   "main": "dist/cli/index.js",
   "bin": {
@@ -23,10 +23,12 @@
     "discussions", 
     "cli",
     "command-line",
+    "terminal",
     "api",
     "graphql",
     "typescript",
-    "nodejs"
+    "nodejs",
+    "developer-tools"
   ],
   "author": {
     "name": "taizo-pro",
