--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "dev": "ts-node src/cli/index.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write src/**/*.ts",
     "prepublishOnly": "npm run build",
@@ -20,7 +20,7 @@
   },
   "keywords": [
     "github",
-    "discussions", 
+    "discussions",
     "cli",
     "command-line",
     "terminal",
@@ -53,22 +53,25 @@
   ],
   "dependencies": {
     "@octokit/graphql": "^7.0.2",
-    "commander": "^11.1.0",
     "chalk": "^5.3.0",
-    "table": "^6.8.1",
-    "inquirer": "^9.2.12"
+    "cli-progress": "^3.12.0",
+    "commander": "^11.1.0",
+    "inquirer": "^9.2.12",
+    "ora": "^8.2.0",
+    "table": "^6.8.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
+    "@types/cli-progress": "^3.11.6",
     "@types/inquirer": "^9.0.7",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
+    "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "prettier": "^3.1.1"
+    "typescript": "^5.3.3"
   }
 }
