Update repository name references from nooknote to github-discussions-cli
- Update package.json repository, homepage, and bugs URLs
- Update README.md git clone instructions

--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/taizo-pro/nooknote.git"
+    "url": "https://github.com/taizo-pro/github-discussions-cli.git"
   },
-  "homepage": "https://github.com/taizo-pro/nooknote#readme",
+  "homepage": "https://github.com/taizo-pro/github-discussions-cli#readme",
   "bugs": {
-    "url": "https://github.com/taizo-pro/nooknote/issues"
+    "url": "https://github.com/taizo-pro/github-discussions-cli/issues"
   },
   "engines": {
     "node": ">=18.0.0"
